refactor: 테스트 케이스 보강, DTO 레벨 검증 추가